--- a/src/form.html
+++ b/src/form.html
@@ -21,7 +21,7 @@
 </button>
 
 <form id="feedbackfin__form">
-  <h1 id="feedbackfin__title">Send feedback</h1>
+  <h1 id="feedbackfin__title">Wir wünschen uns Feedback von dir!</h1>
 
   <div
     id="feedbackfin__radio-group"
@@ -33,14 +33,14 @@
       type="radio"
       id="feedbackfin__radio--issue"
       name="feedbackType"
-      value="issue"
+      value="feedback"
       required
     />
     <label
       for="feedbackfin__radio--issue"
       class="feedbackfin__button feedbackfin__radio-label"
     >
-      <span class="feedbackfin__radio-icon">&#x2757;</span> Issue
+      <span class="feedbackfin__radio-icon">&#x2757;</span> Feedback
     </label>
 
     <input
@@ -48,14 +48,14 @@
       type="radio"
       id="feedbackfin__radio--idea"
       name="feedbackType"
-      value="idea"
+      value="issue"
       required
     />
     <label
       for="feedbackfin__radio--idea"
       class="feedbackfin__button feedbackfin__radio-label"
     >
-      <span class="feedbackfin__radio-icon">&#x1F4A1;</span> Idea
+      <span class="feedbackfin__radio-icon">&#x1F4A1;</span> Problem
     </label>
 
     <input
@@ -70,7 +70,7 @@
       for="feedbackfin__radio--other"
       class="feedbackfin__button feedbackfin__radio-label"
     >
-      <span class="feedbackfin__radio-icon">&#x1F4AD;</span> Other
+      <span class="feedbackfin__radio-icon">&#x1F4AD;</span> Sonstiges
     </label>
   </div>
 
@@ -79,14 +79,14 @@
       id="feedbackfin__message"
       name="message"
       type="text"
-      placeholder="I think…"
+      placeholder="Lasse uns von deinen Gedanken teilhaben, was können wir verbessern?"
       required
       rows="2"
       aria-label="Message"
     ></textarea>
 
     <button id="feedbackfin__submit" class="feedbackfin__button" type="submit">
-      Send
+      Abschicken
     </button>
   </div>
 </form>
@@ -103,7 +103,7 @@
     />
   </svg>
 
-  Thanks for your feedback!
+  Danke für dein Feedback!
 </div>
 
 <div id="feedbackfin__branding">
