feat: update feedback icon class names

--- a/src/form.html
+++ b/src/form.html
@@ -40,7 +40,7 @@
       for="feedbackfin__radio--issue"
       class="feedbackfin__button feedbackfin__radio-label"
     >
-      <span class="feedbackfin__radio-icon agreeIconBig"><br></span> Feedback
+      <span class="feedbackfin__radio-icon agreeFeedbackIconBig"><br></span> Feedback
     </label>
 
     <input
@@ -55,7 +55,7 @@
       for="feedbackfin__radio--idea"
       class="feedbackfin__button feedbackfin__radio-label"
     >
-      <span class="feedbackfin__radio-icon disagreeIconBig"><br></span> Problem
+      <span class="feedbackfin__radio-icon disagreeFeedbackIconBig"><br></span> Problem
     </label>
 
     <input
@@ -70,7 +70,7 @@
       for="feedbackfin__radio--other"
       class="feedbackfin__button feedbackfin__radio-label"
     >
-      <span class="feedbackfin__radio-icon thinkingCloudIconBig"><br></span> Sonstiges
+      <span class="feedbackfin__radio-icon cloudFeedbackIconBig"><br></span> Sonstiges
     </label>
   </div>
 
